<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">MyPrivacy</string>

    <string name="linear_layout_manager" tools:ignore="MissingTranslation">android.support.v7.widget.LinearLayoutManager</string>
    <string name="linear_layout_manager1" tools:ignore="MissingTranslation">android.support.v7.widget.LinearLayoutManager</string>

    <string name="menu_show">Show</string>
    <string name="menu_show_user">Show user apps</string>
    <string name="menu_show_system">Show system apps</string>
    <string name="menu_show_limted">Show limted apps</string>
    <string name="menu_show_all">Show all apps</string>
    <string name="menu_search">Search</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>

    <string name="AppLication">AppLication</string>
    <string name="Network">Network</string>
    <string name="Location">Location</string>
    <string name="Sensors">Sensors</string>
    <string name="UserTrack">UserTrack</string>

    <string name="xposeddescription">Limited part of Appops can not cover privacy rights</string>

    <string name="menu_list" tools:ignore="MissingTranslation">menu_list</string>
    <string name="menu_list_key" tools:ignore="MissingTranslation">menu_list_key</string>
    <string name="menu_list_default" tools:ignore="MissingTranslation">user</string>
    <string name="menu_list_user" tools:ignore="MissingTranslation">user</string>
    <string name="menu_list_system" tools:ignore="MissingTranslation">system</string>
    <string name="menu_list_limted" tools:ignore="MissingTranslation">limted</string>
    <string name="menu_list_all" tools:ignore="MissingTranslation">all</string>

    <string name="about">About</string>
    <string name="About">About</string>
    <string name="Introduction">Based on Xposed framework supplement Appops\'s permissions control.</string>

    <string name="donation">Donation</string>
    <string name="Donation">if my job is helpful to you, you are interested in donating, you can click button </string>
    <string name="Amount">￥2.5</string>
    <string name="or">or you can easily start this project on <a href="https://github.com/Jasper-1024/MyPrivacy">Github</a>  \nthank you very much!</string>

    <string name="address">Github address \n -> https://github.com/Jasper-1024/MyPrivacy</string>
    <string name="Bug">If you encounter a bug , start a new  <a href="https://github.com/Jasper-1024/MyPrivacy/issues">Github issue</a> </string>
    <string name="Email">If you have other questions please email me \n -> ljy087621@gmail.com</string>
    <string name="Blog">Welcome to my blog \n -> https://jasper-1024.github.io/</string>

</resources>
